# CodeOdyssey16

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml
projects/dice_simulator/: README.md
projects/dice_simulator/src/dice_simulator/: __init__.py  main.py
projects/dice_simulator/tests/: __init__.py  test_main.py
projects/email_sender/: README.md
projects/email_sender/src/email_sender/: __init__.py
projects/email_sender/tests/: __init__.py
scripts/: run_tests.py  setup_project.py
utils/: __init__.py  config_manager.py  logging_setup.py
