[project]
name = "CodeOdyssey16"
version = "0.1.0"
description = "A collection of 16 Python projects showcasing a variety of skills and techniques."
authors = [{ name = "Francisco Ruvalcaba", email = "fruvalc@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/frantizek/CodeOdyssey16"
"Bug Tracker" = "https://github.com/frantizek/CodeOdyssey16/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "bandit>=1.7.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = [
    "projects/dice_simulator/src",
    "projects/email_sender/src"
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
pythonpath = [
  "projects/dice_simulator/src",
  "projects/email_sender/src"
]
